--- a/searchAndPagination/index.html
+++ b/searchAndPagination/index.html
@@ -32,7 +32,7 @@
 <body>
   <form>
     <input type="search">
-    <input type="submit">Submit
+    <input type="submit" value="Submit">
   </form>
 </body>
 </html>
